--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.9.1",
+    "astro": "^3.1.0",
+    "bootstrap-icons": "^1.11.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
