--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/markdown-remark": "^3.2.0",
+    "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.0",
     "bootstrap-icons": "^1.11.0",
     "tailwindcss": "^3.3.3"
